# cats-python

./: .README.md  .coveragerc  .gitignore  404.html  CHANGES.md  CNAME  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build.sh  c.py  cats.drawio  cats.py  index.html  manage.py  publish  pyproject.toml  requirements.txt  retype.yml  robots.txt  test
.github/workflows/: codeql-analysis.yml  retype.yml  test.yml
cats/: __init__.py  codecs.py  compression.py  errors.py  handshake.py  identity.py  identity.pyi  plugins.py  struct.py  types.py  utils.py
cats/server/: __init__.py  action.py  action.pyi  app.py  conn.py  conn.pyi  handlers.py  middleware.py  server.py
cats/test_utils/client/: connection.py
cats/test_utils/pytest/: fixtures.py
cats/v2/: __init__.py  action.py  action.pyi  auth.py  codecs.py  compression.py  config.py  connection.py  errors.py  forms.py  handshake.py  headers.py  identity.py  identity.pyi  options.py  registry.py  statement.py  types.py  utils.py
cats/v2/actions/: __init__.py  action.py  api.py  api.pyi  base.py  download_speed.py  encryption.py  input.py  ping.py
cats/v2/client/: __main__.py  connection.py
cats/v2/codecs/: __init__.py  api.py  api.pyi  base.py  byte.py  file.py  scheme.py
cats/v2/compressors/: __init__.py  api.py  api.pyi  base.py  gzip.py  zlib.py
cats/v2/cypher/: __init__.py  api.py  api.pyi  base.py  fernet.py
cats/v2/key_exchanger/: __init__.py  api.py  api.pyi  base.py  ecdhe.py  x25519.py  x448.py
cats/v2/scheme/: __init__.py  api.py  api.pyi  base.py  json.py  msgpack.py  yaml.py
cats/v2/server/: __init__.py  __main__.py  application.py  connection.py  handlers.py  handlers.pyi  middleware.py  proxy.py  server.py
cats/v3/: __init__.py  scheme.py
changelog/: index.html
get-started/: index.html
how-does-it-work/: index.html
protocol/: index.html
protocol/2.0/: index.html
resources/js/: config.js  lunr.js  prism.js  search.json
test-server/: index.html
test_server/: server.py
testing/pytest/: index.html
testing/test-server/: index.html
tests/: conftest.py  data_auth.py  data_test_require.py  handlers.py  settings.py  test_api.py  test_codecs.py  utils.py
tests/test_v2/: conftest.py  handlers.py  test_api.py  test_auth.py  test_codecs.py  test_compression.py  test_forms.py  test_headers.py  test_identity.py  test_schemes.py  test_statements.py  test_utils.py
tests/test_v2/test_codecs/: test_base.py  test_bytes_codec.py  test_file_codec.py  test_scheme_codec.py
tests/test_v2/test_compressors/: conftest.py  test_base.py  test_gzip.py  test_zlib.py
tests/test_v3/: test_schemes.py
wiki/: changelog.md  get-started.md  how-does-it-work.md  index.md  test-server.md  test-server.yml
wiki/protocol/: 2.0.md  2.0.yml  index.md
wiki/testing/: index.yml  pytest.md  test-server.md
