[tool.poetry]
name = "cats-python"
version = "4.6.0"
description = "Cifrazia Action Transport System for Python"
authors = ["Bogdan Parfenov <adam.brian.bright@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://adambrianbright.github.io/cats-python/"
repository = "https://github.com/AdamBrianBright/cats-python"
documentation = "https://adambrianbright.github.io/cats-python/"
keywords = ["cifrazia", "tcp", "rpc", "cats", "tornado"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Russian",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: POSIX :: Linux",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
packages = [
    { include = "cats" }
]

[tool.poetry.urls]
"ChangeLog" = "https://adambrianbright.github.io/cats-python/changelog"
"Bug Tracker" = "https://github.com/AdamBrianBright/cats-python/issues"
"Contact Author" = "https://vk.com/adam_bright"

[tool.poetry.dependencies]
python = ">=3.10.0, <3.11"

richerr = "^0.2.3"
struct-model-python = "^0.1.1"

pytz = "^2023.3"
tornado = "^6.1"
PyYAML = "^6.0"
toml = "^0.10.2"
msgpack = "^1.0.3"
Django = { version = ">=2.0, <3.0", optional = true }
djangorestframework = { version = "3.13", optional = true }
pydantic = { version = ">=2.1.0", optional = true }
ujson = "^5.1.0"

[tool.poetry.extras]
django = ["Django", "djangorestframework"]
pydantic = ["pydantic"]


[tool.poetry.plugins."pytest11"]
"pytest_cats" = "cats.test_utils.pytest.plugin"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pydantic = "^2.1.1"
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
